--- a/IRC-client/window_client.ui
+++ b/IRC-client/window_client.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>802</width>
-    <height>491</height>
+    <width>801</width>
+    <height>471</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,13 +35,6 @@
       <property name="spacing">
        <number>0</number>
       </property>
-      <item>
-       <widget class="Line" name="line">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="2,5,2">
         <property name="spacing">
@@ -156,6 +149,12 @@
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout">
+            <property name="spacing">
+             <number>2</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QLabel" name="label_for_input_text">
               <property name="font">
@@ -199,6 +198,20 @@
               </property>
               <property name="acceptDrops">
                <bool>false</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label">
+              <property name="font">
+               <font>
+                <weight>75</weight>
+                <italic>true</italic>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="text">
+               <string>HELP  </string>
               </property>
              </widget>
             </item>
@@ -255,6 +268,13 @@
       </item>
      </layout>
     </item>
+    <item>
+     <widget class="Line" name="line_2">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -262,7 +282,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>802</width>
+     <width>801</width>
      <height>21</height>
     </rect>
    </property>
